--- a/style.css
+++ b/style.css
@@ -16,3 +16,12 @@
 #container h1{
     font-size: 70px;
 }
+
+#cabecera{
+    background-color: #33a;
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+    box-shadow: 0px 5px 10px 10px rgba(0, 0, 0, 0.75);
+}
