--- a/style.css
+++ b/style.css
@@ -1,27 +1,60 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family: "Arial";
-    color: #333;
-    text-align: left;
+form {
+    width: 200px;
+    margin: 20px auto;
+}
+input {
+    width: 100%;
+    padding: 10px;
 }
 
-#container{
-    width: 70%;
-    padding: 1em;
-    text-align: left;
-    border: 1px solid #ddd;
+.poke-card{
+    position: relative;
+    height: fit-content;
+    max-width: 300px;
+    border-radius: 4px;
+    color: black;
+    text-align: center;
+    padding: 10px;
+    margin: 0 auto;
+    background-color: #fff;
+    border: 1px solid black;
 }
 
-#container h1{
-    font-size: 70px;
+.poke-card::before{
+    content: '';
+    background: radial-gradient(black 33%, transparent 33%);
+    background-size: 3px 3px;
+    border-radius: 4px;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    left: 10px;
+    right: 10px;
+    z-index: -1;
 }
 
-#cabecera{
-    background-color: #33a;
-    color: white;
-    font-weight: bold;
-    margin: 0;
-    padding: 0.5em;
-    box-shadow: 0px 5px 10px 10px rgba(0, 0, 0, 0.75);
+.img-container{
+    position: relative;
+    width: 100%;
+    margin: 10px auto;
+}
+
+.poke-stats div{
+    display: flex;
+    justify-content: space-between;
+    align-content: space-between;
+    padding: 5px;
+    font-size: 18px;
+}
+
+.poke-types div{
+    padding: 5px;
+    margin: 5px;
+    border-radius: 4px;
+    border: 1px dashed black;
+}
+
+.poke-img{
+    width: 100%;
+    height: 100%;
 }
